# opengl-msat

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  README.md  mkdocs.yml
cmake/: LibrarySetup.cmake  ThirdPartyLibs.cmake  opengl_msatConfig.cmake
docs/: index.md  roadmap.md  troubleshooting.md
docs/animation/: animation.md  blueprint.md  control.md  iterations.md  timing-functions.md
docs/camera/: camera.md  projections.md
docs/context/: bindable.md  context.md
docs/controls/: controls.md  cursor-moved.md  ffc.md  input-controller-roles.md  input-controller.md  isometric.md  key-enum.md  keyboard-mapping.md  keyboard.md  mouse-mapping.md  mouse.md
docs/fbo/: attachments.md  depth-mapping.md  fbo-mng.md  fbo.md  screen-quad-fx.md  screen-quad.md
docs/geometry/: 2d-shapes.md  3d-shapes.md  cube.md  object-collection.md  object-xd.md  shapes.md
docs/getting-started/: animations.md  custom-shaders.md  debugging.md  first-app.md  framebuffer.md  getting-started.md  going-3d.md  lights.md  manage-scene.md  pip.md  public-header.md  shader-builders.md  texturing.md  ui.md  vectors-matrices.md
docs/lights/: directional.md  lights.md  normal-mapping.md  point-light.md  spot-light.md
docs/lists/: animation-enums.md  bindable-classes.md  camera-roles-enums.md  framebuffer-enums.md  mouse-enums.md  projections.md  render-options.md  shader-stage.md  signals.md  texture-enums.md
docs/misc/: color.md  coloring.md  image.md  math.md  timer.md
docs/models/: models.md
docs/render/: buffer-clearing.md  render-settings.md  render-state.md  render.md  scene-management.md
docs/shader/: fragment-shader-builder.md  shader.md  uniform.md  vertex-shader-builder.md
docs/text/: text-2d.md  text-3d.md  text.md
docs/textures/: cubemaps.md  materials.md  skybox.md  texture-2d.md  texture-options.md  textures.md  tum.md
docs/timer/: timer.md
docs/tools/: dump.md  grid.md  helper.md  messaging.md  sysinfo.md
docs/ui/: custom-ui-element.md  progress-bar.md  ui-elements.md  ui.md
docs/vertex/: vao.md  vbo-scene.md  vbo.md  vertex-attribute.md
docs/window/: window.md
include/opengl_msat/: common.h  public.hpp
include/opengl_msat/animation/: animation.hpp
include/opengl_msat/bindable/: bindable.hpp
include/opengl_msat/camera/: camera.hpp  camera_controller.hpp  camera_roles.hpp
include/opengl_msat/context/: context.hpp
include/opengl_msat/contracts/: animateable.hpp  bindable.hpp  exports_vertices.hpp  glm_derivative.hpp  shader_builder.hpp  vao_associable.hpp  vertex_element.hpp
include/opengl_msat/controls/: control_types.hpp  input_controller.hpp  keyboard.hpp  keyboard_mapping.hpp  keyboard_types.hpp  mouse.hpp  mouse_mapping.hpp
include/opengl_msat/geometry/: cube.hpp  matrices.hpp  object2d.hpp  object3d.hpp  object_collection.hpp  object_wrapper.hpp  rectangle.hpp  regular_polygon.hpp  shape.hpp  shape2d.hpp  shape3d.hpp  vectors.hpp
include/opengl_msat/math/: math.hpp
include/opengl_msat/model/: model.hpp
include/opengl_msat/renderer/: renderer.hpp  renderstate.hpp
include/opengl_msat/rendering/: framebuffer.hpp  framebuffer_mng.hpp  renderer.hpp  renderstate.hpp  scrquad.hpp
include/opengl_msat/shader/: fragment_sbldr.hpp  glsl.hpp  shader.hpp  shader_builder.hpp  vertex_sbldr.hpp
include/opengl_msat/shared/: keyboard_types.hpp  lights.hpp  projections.hpp  render_types.hpp  scenes.hpp  shader_types.hpp  systeminfo.hpp  types.hpp  vertex_types.hpp
include/opengl_msat/text/: font.hpp  text.hpp
include/opengl_msat/textures/: cubemap.hpp  material.hpp  skybox.hpp  texture.hpp  texture2d.hpp  texture_unit.hpp  texture_unit_mng.hpp
include/opengl_msat/timer/: timer.hpp
include/opengl_msat/tools/: dump.hpp  factory.hpp  grid.hpp  helper.hpp  service_provider.hpp  system.hpp  (+1 more)
libs/bbunit/: bbunit.hpp
samples/: hello_triangle.cpp
tests/: main.cpp
tests/cases/: animation_tests.cpp  animation_tests.hpp  math_tests.cpp  math_tests.hpp  texture_tests.cpp  texture_tests.hpp
(+95 files in other folders)
